# banking-api

./: .gitignore  README.md  pyproject.toml
_bank/: models.py  views.py
account/: factories.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
bank/: admin.py  serializers.py  urls.py
bank/migrations/: 0001_initial.py
bank_project/: settings.py  urls.py
customer/: __init__.py  admin.py  factories.py  models.py  serializers.py  signals.py  urls.py  views.py
customer/migrations/: 0001_initial.py
script/: clear-migration.sh  delete_non_admin_non_staff_users.py  delete_users.py  generate_users.py
transfer/: factories.py  models.py  serializers.py  urls.py  views.py
transfer/migrations/: 0001_initial.py
transfer/tests/: test_api.py
